Карточки вид, кнопка показать еще

--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-    <div data-id={{id}}>
+    <div data-id={{id}} class="card">
         <img src="https://image.tmdb.org/t/p/w500{{poster_path}}" width="300px" data-id={{"id"}} alt={{title}} />
         <p data-id={{id}}>{{title}} ({{release_date}}) </p>
         <p data-id={{id}}>Рейтинг: {{vote_average}}</p>
