--- a/src/scss/header/_list-movie.scss
+++ b/src/scss/header/_list-movie.scss
@@ -4,7 +4,7 @@
 }
 .card {
   width: 350px;
-  height: 600px;
+  // height: 600px;
   margin-right: 10px;
   margin-bottom: 10px;
   text-align: center;
