adds preloader, and styles scss for list-card

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,6 @@
+// @import './preloaderPage/circle-preloader.scss';
+// @import './preloaderPage/words-preloader.scss';
+@import './base/general.scss';
 @import './header/header-registration';
 @import './header/navigation';
 @import './header/list-movie';
