--- a/src/scss/header/_list-movie.scss
+++ b/src/scss/header/_list-movie.scss
@@ -8,7 +8,33 @@
   margin-right: 10px;
   margin-bottom: 10px;
   text-align: center;
-  border: 1px solid grey;
+  border: none;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: #281f55;
+}
+
+.card-title {
+  margin-top: 10px;
+}
+
+.card-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.material-icons {
+  color: #6152a8;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-raiting {
+  color: #f8114d;
+}
+
+.btn-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
