--- a/src/templates/loginRegForm.hbs
+++ b/src/templates/loginRegForm.hbs
@@ -5,16 +5,16 @@
           name="tab"
           class="sign-in"
           checked
-        /><label for="tab-1" class="tab">Sign In</label>
+        /><label for="tab-1" class="tab in">Sign In</label>
         <input id="tab-2" type="radio" name="tab" class="sign-up" /><label
           for="tab-2"
-          class="tab"
+          class="tab up"
           >Sign Up</label
         >
         <div class="login-form">
           <div class="sign-in-htm">
             <div class="group">
-              <label class="label"
+              <label class="label login"
                 >Email Address
                 <input
                   type="email"
@@ -25,7 +25,7 @@
               </label>
             </div>
             <div class="group">
-              <label class="label"
+              <label class="label password"
                 >Password
                 <input
                   type="password"
@@ -39,12 +39,8 @@
                 />
               </label>
             </div>
-            <!-- <div class="group">
-          <input id="check" type="checkbox" class="check" checked>
-          <label for="check"><span class="icon"></span> Keep me Signed in</label>
-        </div> -->
             <div class="group">
-              <input type="submit" class="button" value="Sign In" />
+              <input type="submit" class="button submit__login" value="Sign In" />
             </div>
             <div class="hr"></div>
             <div class="foot-lnk">
@@ -61,8 +57,8 @@
                 >Password
                 <input
                   type="password"
-                  class="input password"
-                  placeholder="4 characters minimum"
+                  class="input password__sign__up"
+                  placeholder=" 4 characters minimum"
                   data-type="password"
                   minlength="4"
                   maxlength="16"
@@ -78,7 +74,7 @@
                   required
                 />
               </label>
-              <button type="submit" class="button">Sign Up</button>
+              <button type="submit" class="button submit__reg">Sign Up</button>
             </form>
           </div>
         </div>
