add registration user

--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -9,20 +9,19 @@ ul {
 .navigation {
   display: flex;
   align-items: center;
-}
+  & .navigation__list {
+    display: flex;
+    margin-right: 20px;
 
-.navigation__list {
-  display: flex;
-  margin-right: 20px;
-}
+    & .navigation__list__item {
+      margin-right: 20px;
 
-.navigation__list__item {
-  margin-right: 20px;
-}
-
-.navigation__list__item.list:hover,
-.navigation__list__item.list:focus {
-  background-color: red;
+      &:hover,
+      &:focus {
+        background-color: red;
+      }
+    }
+  }
 }
 
 .navigation__movie__list.is-hidden {
@@ -31,6 +30,7 @@ ul {
 
 .user__navigation {
   display: flex;
+  margin-left: auto;
 }
 
 .languages {
@@ -39,13 +39,9 @@ ul {
   top: 3%;
   cursor: pointer;
   /* margin-left: auto; */
-}
-.languages .hidden {
-  display: none;
-}
-
-.user__navigation {
-  margin-left: auto;
+  & .hidden {
+    display: none;
+  }
 }
 
 /*  */
