--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -6,9 +6,9 @@
 
     <div class="btn-group btn-group-sm" role="group">
         {{!-- <button type="button" class="btn btn-light" data-id={{id}}>Избранное</button> --}}
-        <p data-id={{id}}><i class="material-icons">favorite_border</i></p>
-        <p data-id={{id}}><i class="material-icons">bookmark_border</i></p>
-        <p data-id={{id}}><i class="material-icons">check_circle_outline</i></p>
+        <p data-id={{id}}><i class="material-icons favorites">favorite_border</i></p>
+        <p data-id={{id}}><i class="material-icons watch__later">bookmark_border</i></p>
+        <p data-id={{id}}><i class="material-icons watched">check_circle_outline</i></p>
         {{!-- <button type="button" class="btn btn-light" data-id={{id}}>Посмотреть</button> --}}
         {{!-- <button type="button" class="btn btn-light" data-id={{id}}>Посмотрел</button> --}}
     </div>
