--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,8 @@
-@import './preloaderPage/circle-preloader.scss';
-@import './preloaderPage/words-preloader.scss';
+// @import './preloaderPage/circle-preloader.scss';
+// @import './preloaderPage/words-preloader.scss';
 @import './base/general.scss';
 @import './header/header-registration';
 @import './header/navigation';
-@import './header/list-movie';
+@import './components/list-movie';
 @import './header/login';
 @import './header/modal-window';
