--- a/src/scss/components/_list-movie.scss
+++ b/src/scss/components/_list-movie.scss
@@ -1,24 +1,57 @@
-.list_movies {
-  display: flex;
-  flex-wrap: wrap;
+.modalDiv {
+  background-color: gray;
+  top: 0;
+  left: 0;
+  z-index: 19;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  outline: 0;
 }
+
+@media (min-width: 768px) {
+  .list_movies {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .list_movies {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.list_movies {
+  width: 100%;
+  flex-wrap: wrap;
+  display: grid;
+  grid-gap: 20px;
+  margin: 0 auto 15px;
+}
+
 .card {
   position: relative;
   display: flex;
   flex-direction: column;
   min-width: 0;
-  width: 350px;
+  width: 100%;
   // height: 600px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  // margin-right: 10px;
+  // margin-bottom: 10px;
   text-align: center;
   border: none;
-  border-radius: 5px;
-  background-color: #281f55;
+  border-radius: 13px;
+  border: 1px solid transparent;
+  background-color: $ListMovieColor;
 
   .card-img-top {
-    border-top-left-radius: calc(0.25rem - 1px);
-    border-top-right-radius: calc(0.25rem - 1px);
+    // border-top-left-radius: calc(0.35rem - 1px);
+    // border-top-right-radius: calc(0.35rem - 1px);
+    flex-shrink: 0;
+    width: 100%;
+    vertical-align: middle;
+    border-style: none;
+    border-radius: 13px 13px 0 0;
   }
 }
 
