--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,11 @@
-// @import './preloaderPage/circle-preloader.scss';
-// @import './preloaderPage/words-preloader.scss';
+@import './preloaderPage/circle-preloader.scss';
+@import './preloaderPage/words-preloader.scss';
 @import './base/general.scss';
+@import './header/header-logo.scss';
 @import './header/header-registration';
 @import './header/navigation';
 @import './components/list-movie';
 @import './header/login';
-@import './header/modal-window';
 @import './movieList/movieList';
+@import './fotter/footer-main.scss';
+@import './movieList/movie-card.scss';
