--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -1,15 +1,15 @@
 {{#each this}}
-    <div data-id={{id}} class="card">
-        <a href="/#/movie/{{id}}">
-            <img class="card-img-top" src="https://image.tmdb.org/t/p/w500{{poster_path}}" data-id={{id}} alt={{title}} />
-            <h5 class="card-title" data-id={{id}}>{{title}} ({{release_date}}) </h5>
-            <p class="card-text" data-id={{id}}><i class="material-icons icon-raiting">view_headline</i>{{vote_average}}</p>
+<div data-id={{id}} class="card">
+    <a class="card__link" href="/#/movie/{{id}}">
+        <img class="card-img-top" src="https://image.tmdb.org/t/p/w500{{poster_path}}" data-id={{id}} alt={{title}} />
+        <h5 class="card-title" data-id={{id}}>{{title}} ({{release_date}}) </h5>
+        <p class="card-text" data-id={{id}}><i class="material-icons icon-raiting">view_headline</i>{{vote_average}}</p>
 
-            <div class="btn-group btn-group-sm" role="group">
-                <p data-id={{id}}><i class="material-icons favorites">favorite_border</i></p>
-                <p data-id={{id}}><i class="material-icons watch__later">bookmark_border</i></p>
-                <p data-id={{id}}><i class="material-icons watched">check_circle_outline</i></p>
-            </div>
-        </a>
-    </div>
+        <div class="btn-group btn-group-sm" role="group">
+            <p data-id={{id}}><i class="material-icons favorites">favorite_border</i></p>
+            <p data-id={{id}}><i class="material-icons watch__later">bookmark_border</i></p>
+            <p data-id={{id}}><i class="material-icons watched">check_circle_outline</i></p>
+        </div>
+    </a>
+</div>
 {{/each}}
