--- a/src/templates/movieCard/trailers.hbs
+++ b/src/templates/movieCard/trailers.hbs
@@ -1,6 +1,16 @@
+{{#unless this}}
+    <p>Нет трейлеров</p>
+{{/unless}}
+
 {{#each this}}
-<div class="card__trailers">
-    <iframe title={{name}} id="ytplayer" type="text/html" width="640" height="360"
-        src="https://www.youtube.com/embed/{{key}}" frameBorder="0" allowFullScreen />
-</div>
-{{each}}
+    <div>
+    <iframe 
+        src="https://www.youtube.com/embed/{{key}}"
+        frameborder="0"
+        allowfullscreen>
+    </iframe>
+    <h4 >{{name}}</h4>
+    </div>
+{{/each}}
+
+
