--- a/src/scss/movieList/movie-card.scss
+++ b/src/scss/movieList/movie-card.scss
@@ -13,3 +13,89 @@
     margin-left: 15px;
   }
 }
+
+/* Style the tab */
+.movie__markup__tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.movie__markup__tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.movie__markup__tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.movie__markup__tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.movie__markup__tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+/* Style the tab */
+.movie__markup__tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.movie__markup__tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.movie__markup__tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.movie__markup__tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.movie__markup__tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+.movie__markup__tabcontent {
+  animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
