--- a/src/templates/movieMarkupCard.hbs
+++ b/src/templates/movieMarkupCard.hbs
@@ -1,6 +1,6 @@
 <div class="movie__markup__card ">
   <div class="movie__markup__img">
-    <img src="https://image.tmdb.org/t/p/w500{{poster_path}}" width="300px" alt={{title}} />
+    <img src="{{poster_path}}" width="300px" alt={{title}} />
   </div>
   <div class="movie__content">
     <div class="card-body">
@@ -22,3 +22,24 @@
     </div>
   </div>
 </div>
+
+  <div>
+    <div class="movie__markup__tab">
+      <button class="movie__markup__tablinks" id="defaultOpen" data-tabname="actors">Актеры</button>
+      <button class="movie__markup__tablinks" data-tabname="reviews">Отзывы</button>
+      <button class="movie__markup__tablinks" data-tabname="trailers">Трейлер</button>
+    </div>
+
+    <!-- Tab content -->
+    <div id="actors" class="movie__markup__tabcontent">
+
+    </div>
+
+    <div id="reviews" class="movie__markup__tabcontent">
+
+    </div>
+
+    <div id="trailers" class="movie__markup__tabcontent">
+
+    </div>
+  </div>
