no poster no actors img

--- a/src/templates/movieCard/actors.hbs
+++ b/src/templates/movieCard/actors.hbs
@@ -7,7 +7,7 @@
     <ul class="list__actors">
         {{#each this}}
             <li class="list__actorCard">
-                <img src="https://image.tmdb.org/t/p/w500{{profile_path}}" width="100px" alt="{{name}}">
+                <img src="{{profile_path}}" width="100px" alt="{{name}}">
                 <h3 class="list__actorName">{{name}}</h3>
                 <p class="list__actorMovieName">{{character}}</p>
             </li>
