--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -2,8 +2,9 @@
 <div data-id={{id}} class="card">
     <a class="card__link" href="/#/movie/{{id}}">
         <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} />
-        <h5 class="card-title" data-id={{id}}>{{title}} ({{release_date}}) </h5>
-        <p class="card-text" data-id={{id}}><i class="material-icons icon-raiting">view_headline</i>{{vote_average}}</p>
+        <h5 data-id={{id}}>{{title}}</h5>
+        <p>{{release_date}}</p>
+        <p class="card-text" data-id={{id}}><i class="material-icons icon-raiting">star_rate</i>{{vote_average}}</p>
 
         <div class="btn-group btn-group-sm" role="group">
             <p data-id={{id}}><i class="material-icons favorites">favorite_border</i></p>
