refactoring main, card country genres

--- a/src/templates/movieMarkupCard.hbs
+++ b/src/templates/movieMarkupCard.hbs
@@ -14,6 +14,9 @@
       {{#each genres}}
       <p class="card-text">{{name}}</p>
       {{/each}}
+
+      <p>{{allGenres}}</p>
+      <p>{{allCountries}}</p>
     </div>
     <div class="btn-group btn-group-sm" role="group">
       <p data-id={{id}}><i class="material-icons">favorite_border</i></p>
