refactoring router, index.js

--- a/src/templates/movieCard/reviews.hbs
+++ b/src/templates/movieCard/reviews.hbs
@@ -14,7 +14,7 @@
         <li class="list__reviewCard">
             <h4 class="list__nameOfUser">{{author}}</h4>
             <p class="list__dateOfReview">{{created_at}} </p>
-            <p class="list__review">{{list__review}}</p>
+            <p class="list__review">{{content}}</p>
         </li>
         {{/each}}
     </ul>
