--- a/src/scss/movieList/movie-card.scss
+++ b/src/scss/movieList/movie-card.scss
@@ -14,9 +14,14 @@
   }
 }
 
+.card-title-text {
+  margin-top: 0;
+}
+
 .icon-runtime-min {
   position: relative;
   padding-left: 30px;
+  margin-top: 0;
 
   .icon-runtime {
     position: absolute;
@@ -95,10 +100,50 @@
   }
 }
 
-.card-title {
+.card-title-movie {
+  margin-top: 0;
   margin-bottom: 20px;
   font-size: 40px;
   line-height: 44px;
   font-weight: 900;
   font-style: normal;
+}
+
+.movie__content {
+  position: relative;
+
+  .card-text-rainting {
+    font-weight: 700;
+    font-size: 24px;
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    margin: 0;
+    display: flex;
+
+    align-items: center;
+  }
+}
+
+.card-body-date {
+  font-weight: 700;
+  font-size: 24px;
+  margin-top: 10px;
+  margin-top: 0;
+}
+
+.card-text-overview {
+  margin-top: 0;
+}
+
+.card-group-icons {
+  margin: 0;
+}
+
+.card__actors {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
 }
