--- a/src/templates/movieCard/reviews.hbs
+++ b/src/templates/movieCard/reviews.hbs
@@ -1,20 +1,19 @@
 {{#unless this}}
-{{!-- <p>Нет отзывов</p> --}}
+<p>Нет отзывов</p>
 {{/unless}}
 
 
 <div class="card__reviews">
-    <p class="name-movie">{{nameOfmovie}}</p>
-    <h4 class="list__nameOfUser">Stanislav</h4>
+    {{!-- <h4 class="list__nameOfUser">Stanislav</h4>
     <p class="list__dateOfReview">29 марта 2018 </p>
     <p class="list__review">Фильм отличный! Крутейшие экшен сцены, городские пейзажи
-        впечатлающие. Атмосфера идеально передана.. Просто супер!</p>
+        впечатлающие. Атмосфера идеально передана.. Просто супер!</p> --}}
     <ul class="list__reviews">
         {{#each this}}
         <li class="list__reviewCard">
             <h4 class="list__nameOfUser">{{author}}</h4>
             <p class="list__dateOfReview">{{created_at}} </p>
-            <p class="list__review">{{list__review}}</p>
+            <p class="list__review">{{content}}</p>
         </li>
         {{/each}}
     </ul>
