adds styles and clasess

--- a/src/scss/movieList/movie-card.scss
+++ b/src/scss/movieList/movie-card.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.card-title {
+  margin-top: 10px;
+}
+
 .card-title-text {
   margin-top: 0;
 }
@@ -146,4 +150,25 @@
   flex-direction: column;
   width: 100%;
   text-align: center;
+}
+
+.list__actors {
+  width: 100%;
+  flex-wrap: wrap;
+  display: grid;
+  grid-gap: 10px;
+  margin: 0 auto 15px;
+  padding: 0;
+}
+
+@media (min-width: 768px) {
+  .list__actors {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .list__actors {
+    grid-template-columns: repeat(6, 1fr);
+  }
 }
