--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -66,20 +66,38 @@
   }
 }
 
-.card-title {
-  margin-top: 10px;
+.card-main-title {
+  margin-top: 15px;
+  margin-bottom: 0;
 }
 
 .card-text {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 15px;
+}
+
+.card-release-vote {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+.text-release-vote {
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
 .material-icons {
   color: #6152a8;
   justify-content: center;
   align-items: center;
+}
+
+.card-group-markup {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .icon-raiting {
