--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,4 @@
 @import './movieList/movieList';
 @import './movieList/movie-card.scss';
 @import './fotter/footer-main.scss';
+@import './header/choices';
