--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -54,19 +54,47 @@
   display: none;
 }
 
-.header-search {
-  border: none;
-  border-bottom: 1px solid #fff;
-  color: #fff;
-  width: 250px;
-  background-color: transparent;
-  overflow: visible;
-  outline: none;
-  margin-left: 300px;
+.search__films {
+  width: 400px;
 
-  &::placeholder {
+  & .search__films__title {
+    margin: 0;
+
+    & .search_films_name,
+    .search_films_genres {
+      cursor: pointer;
+    }
+
+    & .active__search {
+      color: tomato;
+    }
+  }
+
+  & .name,
+  .genres {
+    width: 300px;
+  }
+
+  & .header-search {
+    width: 70%;
+    border: none;
+    border-bottom: 1px solid #fff;
     color: #fff;
-    font-size: 12px;
+    background-color: transparent;
+    overflow: visible;
+    outline: none;
+
+    &::placeholder {
+      color: #fff;
+      font-size: 12px;
+    }
+  }
+
+  & .search-btn {
+    // display: inline-flex;
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
   }
 }
 
