adss styles for actors, weviews and trailers

--- a/src/templates/movieCard/actors.hbs
+++ b/src/templates/movieCard/actors.hbs
@@ -1,16 +1,16 @@
 {{#unless this}}
-    <p>Нет актеров</p>
+<p>Нет актеров</p>
 {{/unless}}
 
 
 <div class="card__actors">
     <ul class="list__actors">
         {{#each this}}
-            <li class="list__actorCard">
-                <img src="{{profile_path}}" width="100px" alt="{{name}}">
-                <h3 class="list__actorName">{{name}}</h3>
-                <p class="list__actorMovieName">{{character}}</p>
-            </li>
+        <li class="list__actor-card">
+            <img src="{{profile_path}}" width="100px" alt="{{name}}">
+            <h3 class="list__actor-name">{{name}}</h3>
+            <p class="list__actor-moviename">{{character}}</p>
+        </li>
         {{/each}}
     </ul>
 </div>
