--- a/src/templates/movieCard/reviews.hbs
+++ b/src/templates/movieCard/reviews.hbs
@@ -10,9 +10,9 @@
         впечатлающие. Атмосфера идеально передана.. Просто супер!</p> --}}
     <ul class="list__reviews">
         {{#each this}}
-        <li class="list__reviewCard">
-            <h4 class="list__nameOfUser">{{author}}</h4>
-            <p class="list__dateOfReview">{{created_at}} </p>
+        <li class="list__review-card">
+            <h4 class="list__name-user">{{author}}</h4>
+            <p class="list__date-review">{{created_at}} </p>
             <p class="list__review">{{content}}</p>
         </li>
         {{/each}}
