--- a/src/scss/footer/footer-main.scss
+++ b/src/scss/footer/footer-main.scss
@@ -1,4 +1,17 @@
 .footer_container {
   height: 50px;
   background: $headerFooterColor;
+  padding: 30px 10px;
+  text-align: center;
+
+  // box-shadow: inset 0 0 6px #6152a8;
+}
+
+.footer_copyright {
+  font-size: 10px;
+  letter-spacing: 0.03em;
+  font-weight: 300;
+}
+
+.icon-cross {
 }
