--- a/src/scss/footer/footer-main.scss
+++ b/src/scss/footer/footer-main.scss
@@ -13,5 +13,8 @@
   font-weight: 300;
 }
 
-.icon-cross {
+.material-icons.footer-icon {
+  color: #f8104d;
+  font-size: 10px;
+  align-items: center;
 }
