--- a/src/scss/movieList/movie-card.scss
+++ b/src/scss/movieList/movie-card.scss
@@ -109,6 +109,7 @@
 .card-title-movie {
   margin-top: 0;
   max-width: 80%;
+  letter-spacing: 0.03em;
   margin-bottom: 20px;
   font-size: 40px;
   line-height: 44px;
