added interests to the database and their dynamic change

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,4 @@
 @import './movieList/movie-card.scss';
 @import './fotter/footer-main.scss';
 @import './header/choices';
+@import './movieList/pagination';
