--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -10,10 +10,7 @@
                 class="material-icons icon-raiting">star_rate</i>{{vote_average}}</p>
     </div>
 
-    <div class="btn-group btn-group-sm" role="group">
-        <p class="card-group-markup" data-id={{id}}><i class="material-icons favorites">favorite_border</i></p>
-        <p class="card-group-markup" data-id={{id}}><i class="material-icons watch__later">bookmark_border</i></p>
-        <p class="card-group-markup" data-id={{id}}><i class="material-icons watched">check_circle_outline</i></p>
+    <div class="btn-group btn-group-sm status__film__js" data-container={{id}} role="group">
     </div>
 </div>
 {{/each}}
