--- a/src/templates/movieMarkupCard.hbs
+++ b/src/templates/movieMarkupCard.hbs
@@ -15,10 +15,7 @@
       <p class="card-text-rainting" data-id={{id}}><i class="material-icons icon-raiting">star_rate</i>{{vote_average}}
       </p>
     </div>
-    <div class="btn-group-icons" role="group">
-      <p class="card-group-icons" data-id={{id}}><i class="material-icons">favorite_border</i></p>
-      <p class="card-group-icons" data-id={{id}}><i class="material-icons">bookmark_border</i></p>
-      <p class="card-group-icons" data-id={{id}}><i class="material-icons">check_circle_outline</i></p>
+    <div class="btn-group btn-group-sm status__film__js" data-container={{id}} role="group">
     </div>
   </div>
 </div>
