--- a/src/templates/movieCard/reviews.hbs
+++ b/src/templates/movieCard/reviews.hbs
@@ -1,14 +1,8 @@
-{{#unless this}}
-<p>Нет отзывов</p>
-{{/unless}}
-
-
 <div class="card__reviews">
-    {{!-- <h4 class="list__nameOfUser">Stanislav</h4>
-    <p class="list__dateOfReview">29 марта 2018 </p>
-    <p class="list__review">Фильм отличный! Крутейшие экшен сцены, городские пейзажи
-        впечатлающие. Атмосфера идеально передана.. Просто супер!</p> --}}
-    <ul class="list__reviews">
+    {{#unless this}}
+    <p class="list__reviews no-reviews"">Нет отзывов</p>
+    {{/unless}}
+    <ul class=" list__reviews">
         {{#each this}}
         <li class="list__review-card">
             <h4 class="list__name-user">{{author}}</h4>
@@ -16,5 +10,5 @@
             <p class="list__review">{{content}}</p>
         </li>
         {{/each}}
-    </ul>
+        </ul>
 </div>
