--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -1,19 +1,23 @@
 {{#each this}}
 <div data-id={{id}} class="card">
-    <a class="card__link" href="/#/movie/{{id}}">
-        <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} />
-    </a>
-    <h5 class="card-main-title" data-id={{id}}>{{title}}</h5>
-    <div class="card-release-vote">
-        <p class="text-release-vote">{{release_date}}</p>
-        <p class="card-text text-release-vote" data-id={{id}}><i
-                class="material-icons icon-raiting">star_rate</i>{{vote_average}}</p>
+
+    <div class="card__movie_markup">
+        <a class="card__link" href="/#/movie/{{id}}">
+            <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} />
+
+        </a>
+        <p class="card-text" data-id={{id}}><i
+                class="material-icons icon-raiting icon-raiting-markup">star_rate</i>{{vote_average}}</p>
     </div>
 
-    <div class="btn-group btn-group-sm" role="group">
-        <p class="card-group-markup" data-id={{id}}><i class="material-icons favorites">favorite_border</i></p>
-        <p class="card-group-markup" data-id={{id}}><i class="material-icons watch__later">bookmark_border</i></p>
-        <p class="card-group-markup" data-id={{id}}><i class="material-icons watched">check_circle_outline</i></p>
+    <div class="card-release-general">
+        <h5 class="card-main-title" data-id={{id}}>{{title}}</h5>
+        <p class="text-release-vote">{{release_date}}</p>
+        <div class="btn-group btn-group-sm" role="group">
+            <p class="card-group-markup" data-id={{id}}><i class="material-icons favorites">favorite_border</i></p>
+            <p class="card-group-markup" data-id={{id}}><i class="material-icons watch__later">bookmark_border</i></p>
+            <p class="card-group-markup" data-id={{id}}><i class="material-icons watched">check_circle_outline</i></p>
+        </div>
     </div>
 </div>
 {{/each}}
