--- a/src/templates/movieMarkupCard.hbs
+++ b/src/templates/movieMarkupCard.hbs
@@ -8,7 +8,7 @@
       <p class="card-body-date">{{release_date}}</p>
       <p class="card-title-text">{{allCountries}}</p>
       <p class="card-title-text">{{allGenres}}</p>
-      <div>
+      <div class="card-title-text">
         <p class="icon-runtime-min"><i class="material-icons icon-runtime">theaters</i>{{runtime}} мин</p>
       </div>
       <p class="card-text-overview">{{overview}}</p>
@@ -16,9 +16,9 @@
       </p>
     </div>
     <div class="btn-group-icons" role="group">
-      <p class="card-group-icons" data-id={{id}}><i class="material-icons">favorite_border</i></p>
-      <p class="card-group-icons" data-id={{id}}><i class="material-icons">bookmark_border</i></p>
-      <p class="card-group-icons" data-id={{id}}><i class="material-icons">check_circle_outline</i></p>
+      <p class="card-group-icons" data-id={{id}}><i class="material-icons icons-card-movie">favorite_border</i></p>
+      <p class="card-group-icons" data-id={{id}}><i class="material-icons icons-card-movie">bookmark_border</i></p>
+      <p class="card-group-icons" data-id={{id}}><i class="material-icons icons-card-movie">check_circle_outline</i></p>
     </div>
   </div>
 </div>
