--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -9,17 +9,6 @@
   }
 }
 
-.modalDiv {
-  background-color: gray;
-  top: 0;
-  left: 0;
-  z-index: 19;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  outline: 0;
-}
-
 @media (min-width: 768px) {
   .list_movies {
     grid-template-columns: repeat(3, 1fr);
@@ -41,73 +30,100 @@
 }
 
 .card {
-  position: relative;
   display: flex;
   flex-direction: column;
-  min-width: 0;
-  width: 100%;
-  // height: 600px;
-  // margin-right: 10px;
-  // margin-bottom: 10px;
-  text-align: center;
+  box-sizing: content-box;
+  text-align: start;
   border: none;
   border-radius: 13px;
-  border: 1px solid transparent;
-  background-color: $ListMovieColor;
 
   .card-img-top {
-    // border-top-left-radius: calc(0.35rem - 1px);
-    // border-top-right-radius: calc(0.35rem - 1px);
-    flex-shrink: 0;
     width: 100%;
-    vertical-align: middle;
-    border-style: none;
+    height: 440.63px;
     border-radius: 13px 13px 0 0;
   }
 }
 
-.card-main-title {
-  margin-top: 15px;
-  margin-bottom: 0;
+.card__movie_markup {
+  position: relative;
 }
 
 .card-text {
+  position: absolute;
+  content: '';
+  bottom: 4px;
+  right: -6px;
+  background: $secondaryColor;
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 15px;
+  margin-top: 0;
+  width: 60px;
+  height: 30px;
+  letter-spacing: 0.03em;
+  // margin-bottom: 15px;
 }
 
-.card-release-vote {
+.card-release-general {
   display: flex;
-  text-align: center;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  padding: 15px;
+  height: 100%;
+  overflow: hidden;
+  background-color: $ListMovieColor;
+  border-radius: 0px 0px 13px 13px;
 }
 
 .text-release-vote {
-  margin-top: 10px;
-  margin-bottom: 0;
+  font-size: 18px;
+  position: absolute;
+  content: '';
+  bottom: 3px;
+  right: 6px;
+  z-index: 2;
 }
 
+.text-release-vote::after {
+  height: 30px;
+  width: 76px;
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  right: -15px;
+  transform: skewX(-45deg);
+  z-index: -1;
+  background-color: rgba(97, 82, 168, 0.2);
+}
 
 .material-icons {
   color: #6152a8;
   justify-content: center;
   align-items: center;
+  font-size: 30px;
+}
+
+.card-main-title {
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .card-group-markup {
-  margin-top: 10px;
+  margin-top: 0;
   margin-bottom: 0;
+
+  &:not(:last-child) {
+    margin-right: 20px;
+  }
 }
 
-
-.icon-raiting {
-  color: #f8114d;
+.icon-raiting.icon-raiting-markup {
+  color: #fff;
 }
 
 .btn-group {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
