--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
-@import './preloaderPage/circle-preloader.scss';
-@import './preloaderPage/words-preloader.scss';
+// @import './preloaderPage/circle-preloader.scss';
+// @import './preloaderPage/words-preloader.scss';
 @import './pagination/pagination.scss';
 @import './base/general.scss';
 @import './header/header-logo.scss';
@@ -10,4 +10,5 @@
 @import './movieList/movie-card.scss';
 @import './footer/footer-main.scss';
 @import './header/choices';
-@import './movieList/pagination';
+@import './header/menu';
+@import './header/menuDesktop';
