--- a/src/scss/header/_menuDesktop.scss
+++ b/src/scss/header/_menuDesktop.scss
@@ -25,37 +25,13 @@ $menu-items: 3;
 .wrapper {
   position: relative;
   width: 150px;
-  height: 150px;
-  margin: 10px auto;
+  // height: 50px;
+  // margin: 10px auto;
 }
 
-.button {
-  display: flex;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  background: #2e3f47;
-  z-index: 2;
-}
-
-.button__line {
-  background: #ccc;
-  width: 90px;
-  height: 15px;
-
-  &:not(:first-child) {
-    margin-top: 15px;
-  }
-}
-
-.menu {
-  width: 100%;
-}
+// .menu {
+//   width: 100%;
+// }
 
 .menu__list {
   text-align: center;
