add drop down menu

--- a/src/templates/header/dropDownMenu.hbs
+++ b/src/templates/header/dropDownMenu.hbs
@@ -1,9 +1,5 @@
-<div class="wrapper">
-  <div class="menu">
-    <ul class="menu__list">
-      <li class="menu__list__item"><a href="#">Home</a></li>
-      <li class="menu__list__item"><a href="#">Portfolio</a></li>
-      <li class="menu__list__item"><a href="#">About</a></li>
-    </ul>
-  </div>
-</div>
+<li class="menu__list__item"><i class="material-icons">home</i><a href="#">Home</a></li>
+<li class="menu__list__item"><i class="material-icons favorites">favorite_border</i><a href="#">Favorites</a></li>
+<li class="menu__list__item"><i class="material-icons watched">bookmark_border</i><a href="#">Watched</a></li>
+<li class="menu__list__item"><i class="material-icons watch__later">check_circle_outline</i><a href="#">Watched Later</a></li>
+<li class="menu__list__item"><i class="material-icons sensor_door">sensor_door</i><a class="user__logout" href="#">Log out</a></li>
